--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
+pom.xml.new
+pom.xml.old
+pom.xml.old*
+effective-pom.xml
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
