--- a/inventoryservice/pom.xml
+++ b/inventoryservice/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.technet.ms.standalone</groupId>
 	<artifactId>inventoryservice</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<name>inventoryservice</name>
 	<description>Inventory Service</description>
 	<url/>
@@ -48,9 +48,14 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency> -->
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency> -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
