--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -1,9 +1,22 @@
 server.port=8082
 spring.application.name=order-service
 #eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-spring.datasource.url=jdbc:h2:mem:orderdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=spbootuser
+spring.datasource.password=m4sq1@1024
+management.endpoint.beans.enabled=true
+management.endpoints.web.exposure.include=beans
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+
+# The following are H2 related settings
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:orderdb
+# spring.datasource.username=sa
+# spring.datasource.password=password
