Make code modifications to make docker container work and resolve the intercommunication between docker containers

--- a/inventoryservice/src/main/resources/application.properties
+++ b/inventoryservice/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jpa.show-sql: true
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:inventorydb
 # spring.datasource.username=sa
-# spring.datasource.password=password
+# spring.datasource.password=passwordcd ord
