--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -12,6 +12,17 @@ management.endpoints.web.exposure.include=beans
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+logging.level.org.hibernate.SQL=DEBUG
+productservice.api.baseurl=http://productservice:8081
+
+# The following are all the statements to make the SQL logging 
+# with bound parameters to show up in logging. Need to clean them up
+# to just have one seeting which is useful. 
+# logging.level.org.hibernate.type.descriptor.sql=trace
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.orm.jdbc.bind=TRACE
+# spring.jpa.properties.hibernate.format_sql=true
+
 
 # The following are H2 related settings
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
